Allow wf26 in integration tests
Signed-off-by: Rob Stryker <rob@oxbeef.net>